--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-modal": "^12.0.3",
+    "react-native-typical": "^1.1.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
